# builtin-actors

./: .gitignore  .gitmodules  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  RELEASE.md  build-bundle.sh  build.rs  bundle-size  codecov.yml  deny.toml  make_test_mike_command_dont_commit.sh  pr-desc.md  rust-toolchain.toml  upload-bundle.sh
.cargo/: config.toml
actor_blockstore/: Cargo.toml
actor_blockstore/src/: lib.rs  memory.rs  tracking.rs
actors/account/: Cargo.toml  build.rs
actors/account/src/: lib.rs  state.rs  testing.rs  types.rs
actors/account/tests/: account_actor_test.rs
actors/account_state_v8/: Cargo.toml
actors/account_state_v8/src/: lib.rs  testing.rs
actors/account_state_v8/tests/: account_actor_test.rs
actors/cron/: Cargo.toml
actors/cron/src/: lib.rs  state.rs  testing.rs
actors/cron/tests/: cron_actor_test.rs
actors/cron_state_v8/: Cargo.toml
actors/cron_state_v8/src/: lib.rs  testing.rs
actors/cron_state_v8/tests/: cron_actor_test.rs
actors/datacap/: Cargo.toml
actors/datacap/src/: lib.rs  state.rs  testing.rs  types.rs
actors/datacap/tests/: datacap_actor_test.rs
actors/delegator/: Cargo.toml
actors/delegator/src/: lib.rs  state.rs  types.rs
actors/delegator/tests/: apply_invalid_cases.rs  apply_multiple_mappings.rs  delegator_test.rs  hamt_persistence.rs  hamt_stress.rs  nonce_accounting.rs  tuple_shape_roundtrip.rs
actors/eam/: Cargo.toml
actors/eam/src/: ext.rs  lib.rs
actors/eam/tests/: create.rs
actors/ethaccount/: Cargo.toml
actors/ethaccount/src/: lib.rs  state.rs  types.rs
actors/ethaccount/tests/: apply_and_call_atomicity.rs  apply_and_call_cbor_fuzz.rs  apply_and_call_duplicates.rs  apply_and_call_invalids.rs  apply_and_call_nonces.rs  apply_and_call_outer_call.rs  apply_and_call_rs_padding.rs  apply_and_call_tuple_cap_boundary.rs  apply_and_call_tuple_roundtrip.rs  apply_and_call_value_transfer.rs  authenticate_message.rs  ethaccount_test.rs  util.rs
actors/evm/: Cargo.toml  Makefile  README.md
actors/evm/precompile-testdata/: README.md
actors/evm/shared/: Cargo.toml
actors/evm/src/: ext.rs  lib.rs  precompiles.rs  reader.rs  state.rs  types.rs
actors/evm/tests/: apply_and_call_atomicity_getbytecode_error.rs  apply_and_call_atomicity_invokeaseoa.rs  apply_and_call_atomicity_revert.rs  apply_and_call_cbor_fuzz.rs  apply_and_call_delegate_no_code.rs  apply_and_call_depth_limit.rs  apply_and_call_duplicates.rs  apply_and_call_intrinsic_gas.rs  apply_and_call_invalids.rs  apply_and_call_invokeaseoa_decode_error.rs  apply_and_call_invokecontract_decode_error.rs  apply_and_call_nonces.rs  apply_and_call_selfdestruct.rs  apply_and_call_tuple_cap.rs  apply_and_call_tuple_roundtrip.rs  apply_and_call_value_transfer.rs  asm.rs  basic.rs  calc.rs  call.rs  call_delegated_eoa.rs  call_nested_delegated_eoa.rs  context_opcodes.rs  create.rs  delegate_call.rs  delegated_call_revert_data.rs  delegated_storage_isolation.rs  delegated_storage_persistence.rs  eip7939_clz.rs  env.rs  eoa_call_pointer_semantics.rs  eoa_delegate_absent_mapping.rs  eoa_delegate_missing_code_noop.rs  eoa_delegate_non_evm_noop.rs  eoa_delegate_staticcall.rs  eoa_delegate_staticcall_absent.rs  eoa_delegate_staticcall_nv.rs  eoa_delegated_event.rs  eoa_delegated_storage.rs  eoa_invoke.rs  (+19 more)
actors/init/: Cargo.toml  build.rs
actors/init/src/: lib.rs  state.rs  testing.rs  types.rs
actors/init/tests/: init_actor_test.rs
actors/init_state_v9/: Cargo.toml
actors/init_state_v9/src/: lib.rs  state.rs
actors/init_state_v9/tests/: init_actor_test.rs
actors/market/: Cargo.toml
actors/market/src/: balance_table.rs  deal.rs  emit.rs  ext.rs  lib.rs  policy.rs  state.rs  testing.rs  types.rs
actors/market/tests/: activate_deal_failures.rs  batch_activate_deals.rs  compute_data_commitment.rs  cron_tick_deal_expiry.rs  cron_tick_deal_slashing.rs  cron_tick_timedout_deals.rs  deal_api_test.rs  deal_termination.rs  harness.rs  market_actor_legacy_tests.rs  market_actor_test.rs  on_miner_sectors_terminate.rs  (+7 more)
actors/market_state_v8/: Cargo.toml
actors/miner/: Cargo.toml
actors/miner_state_v8/: Cargo.toml
actors/multisig/: Cargo.toml
actors/paych/: Cargo.toml
actors/placeholder/: Cargo.toml
actors/power/: Cargo.toml
builder/: Cargo.toml
builder/src/: lib.rs
bundle/: Cargo.toml  Makefile  build.rs
bundle/bundler/: Cargo.toml
bundle/src/: lib.rs
bundler/: Cargo.toml
bundler/src/: lib.rs
integration_tests/: Cargo.toml
integration_tests/macro/: Cargo.toml
integration_tests/src/: deals.rs  expects.rs  lib.rs
integration_tests/test_macro/: Cargo.toml  build.rs
runtime/: Cargo.toml  build.rs
runtime/src/: actor_error.rs  dispatch.rs  features.rs  lib.rs  test_blockstores.rs  test_utils.rs
runtime/tests/: alpha_beta_filter_test.rs  batch_return_test.rs  mapmap_test.rs  multimap_test.rs  set_multimap_test.rs  set_test.rs  types_test.rs
state/: Cargo.toml
state/src/: check.rs
test_evm_eth_compliance/: Cargo.toml  readme.md
test_evm_eth_compliance/src/: cmd.rs  main.rs
test_evm_eth_compliance/test-vectors/: 01_wk2250_skip_test_tracking.md  02_GeneralStateTests_status.md  skip_test.json
test_vm/: Cargo.toml
test_vm/src/: bench.rs  constants.rs  deals.rs  expects.rs  fakes.rs  lib.rs  messaging.rs  trace.rs  util.rs  vm.rs  vm_util.rs
test_vm/tests/: README.md  account_authenticate_message_test.rs  authenticate_message_test.rs  batch_onboarding.rs  batch_onboarding_deals_test.rs  change_beneficiary_test.rs  change_owner_test.rs  commit_post_test.rs  datacap_tests.rs  evm_test.rs  extend_sectors_test.rs  init_test.rs  market_miner_withdrawal_test.rs  move_partitions_test.rs  multisig_test.go  multisig_test.rs  power_scenario_tests.rs  prove_commit2_test.rs  publish_deals_test.rs  replica_update2_test.rs  replica_update_test.rs  terminate_gas_bench.rs  terminate_test.rs  test_vm_test.rs  utils.rs  verified_claim_test.rs  verifreg_remove_datacap_test.rs  withdraw_balance_test.rs
vm_api/: Cargo.toml
vm_api/src/: blockstore.rs  builtin.rs  error.rs  lib.rs  trace.rs
(+735 files in other folders)
