[workspace]
members = [
  "runtime",
  "state",
  "test_vm",
  "actors/account",
  "actors/cron",
  "actors/init",
  "actors/multisig",
  "actors/paych",
  "actors/reward",
  "actors/power",
  "actors/system",
  "actors/verifreg",
  "actors/market",
  "actors/miner",
  "actors/datacap",
  "actors/account_state_v8",
  "actors/cron_state_v8",
  "actors/init_state_v8",
  "actors/multisig_state_v8",
  "actors/paych_state_v8",
  "actors/reward_state_v8",
  "actors/power_state_v8",
]
resolver = "2"
