[package]
name = "fil_builtin_actors_bundle"
description = "Bundle of FVM-compatible Wasm bytecode for Filecoin builtin actors"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/filecoin-project/canonical-actors"

[dependencies]
clap = { version= "3.0.14", features = ["derive"] }
fvm_shared = { git = "https://github.com/filecoin-project/ref-fvm", branch = "raulk/extract-actors" }
ipld_car = { git = "https://github.com/filecoin-project/ref-fvm", branch = "raulk/extract-actors" }
cid = { version = "0.8.2", default-features = false, features = ["serde-codec"] }
multihash = { version = "0.16.1", default-features = false, features = ["identity"] }
async-std = { version = "1.10.0" }
futures = "0.3.21"
fil_actor_bundler = { path = "./bundler" }

[build-dependencies]
fil_actor_bundler = { path = "./bundler" }
cid = { version = "0.8.2", default-features = false, features = ["serde-codec"] }