[package]
name = "fil_builtin_actors_bundle"
description = "Bundle of FVM-compatible Wasm bytecode for Filecoin builtin actors"
version = "6.0.1"
license = "MIT OR Apache-2.0"
authors = ["Protocol Labs", "Filecoin Core Devs"]
edition = "2021"
repository = "https://github.com/filecoin-project/builtin-actors"
keywords = ["filecoin", "web3", "wasm"]

[build-dependencies]
fil_actor_account = { version = "6.0.0", path = "../actors/account", features = ["wasm"] }
fil_actor_verifreg = { version = "6.0.0", path = "../actors/verifreg", features = ["wasm"] }
fil_actor_cron = { version = "6.0.0", path = "../actors/cron", features = ["wasm"] }
fil_actor_market = { version = "6.0.0", path = "../actors/market", features = ["wasm"] }
fil_actor_multisig = { version = "6.0.0", path = "../actors/multisig", features = ["wasm"] }
fil_actor_paych = { version = "6.0.0", path = "../actors/paych", features = ["wasm"] }
fil_actor_power = { version = "6.0.0", path = "../actors/power", features = ["wasm"] }
fil_actor_miner = { version = "6.0.0", path = "../actors/miner", features = ["wasm"] }
fil_actor_reward = { version = "6.0.0", path = "../actors/reward", features = ["wasm"] }
fil_actor_system = { version = "6.0.0", path = "../actors/system", features = ["wasm"] }
fil_actor_init = { version = "6.0.0", path = "../actors/init", features = ["wasm"] }
fil_actor_bundler = { version = "6.0.1", path = "./bundler" }
cid = { version = "0.8.2", default-features = false, features = ["serde-codec"] }
