[package]
name = "fil_actor_bundler"
description = "An IPLD CAR bundling tool for Wasm bytecode"
version = "1.0.2"
license = "MIT OR Apache-2.0"
authors = ["Protocol Labs", "Filecoin Core Devs"]
edition = "2021"
repository = "https://github.com/filecoin-project/builtin-actors"
keywords = ["filecoin", "web3", "wasm"]

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
fvm_shared = { version = "0.2.0" }
fvm_ipld_car = { version = "0.2.0" }
cid = { version = "0.8.3", default-features = false, features = ["serde-codec"] }
multihash = { version = "0.16.1", default-features = false, features = ["identity"] }
async-std = "1.10.0"
futures = "0.3.21"
anyhow = "1.0.56"
serde_ipld_dagcbor = "0.1.0"
serde_json = "1.0.79"

[dev-dependencies]
tempfile = "3.3.0"
rand = "0.8.5"
num-traits = "0.2.14"
