[package]
name = "fil_actors_integration_tests"
description = "Portable integration tests for FVM targets"
version = "1.0.0"
license = "MIT OR Apache-2.0"
authors = ["Protocol Labs", "Filecoin Core Devs"]
edition.workspace = true
keywords = ["filecoin", "web3", "wasm"]
publish = false

[lib]

[dependencies]
fil_builtin_actors_state = { workspace = true }
fil_actors_runtime = { workspace = true, features = [ "test_utils" ] }
fil_actor_init = { workspace = true }
fil_actor_cron = { workspace = true }
fil_actor_system = { workspace = true }
fil_actor_account = { workspace = true }
fil_actor_multisig = { workspace = true }
fil_actor_paych = { workspace = true }
fil_actor_reward = { workspace = true }
fil_actor_power = { workspace = true }
fil_actor_market = { workspace = true }
fil_actor_verifreg = { workspace = true }
fil_actor_miner = { workspace = true }
fil_actor_datacap = { workspace = true }
fil_actor_evm = { workspace = true }
fil_actor_eam = { workspace = true }
fil_actor_ethaccount = { workspace = true }
fil_actors_evm_shared = { workspace = true }
vm_api = { workspace = true, features = ["testing"] }

anyhow = { workspace = true }
bimap = { workspace = true }
blake2b_simd = { workspace = true }
cid = { workspace = true }
alloy-core = { workspace = true }
frc42_dispatch = { workspace = true }
frc46_token = { workspace = true }
fvm_actor_utils = { workspace = true }
fvm_ipld_bitfield = { workspace = true }
fvm_ipld_blockstore = { workspace = true }
fvm_ipld_encoding = { workspace = true }
fvm_ipld_hamt = { workspace = true }
fvm_shared = { workspace = true }
hex = { workspace = true }
hex-literal = { workspace = true }
indexmap = { workspace = true }
integer-encoding = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
k256 = { workspace = true, features = ["ecdsa"] }
export_macro = { path = "./macro" }
ctor = "0.4.1"
multihash-codetable = { workspace = true }

[dev-dependencies]
test-case = { workspace = true }
hex-literal = { workspace = true }
