[package]
name        = "fil_actors_runtime_common"
description = "System actors for the Filecoin protocol"
version     = "9.0.3"
license     = "MIT OR Apache-2.0"
authors     = ["ChainSafe Systems <info@chainsafe.io>", "Protocol Labs", "Filecoin Core Devs"]
edition     = "2021"
repository  = "https://github.com/filecoin-project/builtin-actors"

[dependencies]
base64           = "0.13.0"
byteorder        = "1.4.3"
cid              = { version = "0.8.3", default-features = false, features = ["serde-codec"] }
fvm_ipld_amt     = { version = "0.4.2", features = ["go-interop"] }
fvm_ipld_hamt    = "0.5.1"
fvm_shared       = { version = "2.0.0-alpha.2", default-features = false }
indexmap         = { version = "1.8.0", features = ["serde-1"] }
integer-encoding = { version = "3.0.3", default-features = false }
lazy_static      = { version = "1.4.0", optional = true }
log              = "0.4.14"
num-derive       = "0.3.3"
num-traits       = "0.2.14"
serde            = { version = "1.0.136", features = ["derive"] }
thiserror        = "1.0.30"
unsigned-varint  = "0.7.1"
# enforce wasm compat
anyhow              = "1.0.65"
blake2b_simd        = "1.0"
fvm_ipld_bitfield   = "0.5.2"
fvm_ipld_blockstore = "0.1.1"
fvm_ipld_encoding   = "0.2.2"
fvm_sdk             = { version = "2.0.0-alpha.3", optional = true }
getrandom           = { version = "0.2.5", features = ["js"] }
hex                 = { version = "0.4.3", optional = true }
itertools           = "0.10"
multihash           = { version = "0.16.1", default-features = false }
paste               = "1.0.9"
rand                = "0.8.5"
regex               = "1"
serde_repr          = "0.1.8"

[dependencies.sha2]
version = "0.10"

[dev-dependencies]
derive_builder = "0.10.2"
hex            = "0.4.3"

[features]
default   = []
fil-actor = ["fvm_sdk"]

# Enable 2k sectors
sector-2k = []
# Enable 8m sectors
sector-8m = []
# Enable 512m sectors
sector-512m = []
# Enable 32g sectors
sector-32g = []
# Enable 64g sectors
sector-64g = []
# Enable the "default" sectors types.
sector-default = ["sector-64g", "sector-32g"]

# Reduce min verified deal size from 1MiB to 256B
small-deals = []
# Reduce pre-commit delay from 150 epochs, to 10.
short-precommit = []

# Lower the minimum power requirement to 2k
min-power-2k = []
# Lower the minimum power requirement to 2g
min-power-2g = []

# no collateral for deals (for testing)
no-provider-deal-collateral = []

# fake proofs (for testing)
fake-proofs = []

test_utils = ["hex", "multihash/sha2", "lazy_static"]
