[package]
name = "fil_actors_runtime"
description = "System actors for the Filecoin protocol"
version = "10.0.0-alpha.1"
license = "MIT OR Apache-2.0"
authors = ["ChainSafe Systems <info@chainsafe.io>", "Protocol Labs", "Filecoin Core Devs"]
edition = "2021"
repository = "https://github.com/filecoin-project/builtin-actors"

[dependencies]
fvm_ipld_hamt = "0.6.1"
fvm_ipld_amt = { version = "0.5.0", features = ["go-interop"] }
fvm_shared = { version = "3.0.0-alpha.12", default-features = false }
num-traits = "0.2.14"
num-derive = "0.3.3"
serde = { version = "1.0.136", features = ["derive"] }
lazy_static = { version = "1.4.0", optional = true }
unsigned-varint = "0.7.1"
byteorder = "1.4.3"
cid = { version = "0.8.3", default-features = false, features = ["serde-codec"] }
log = "0.4.14"
thiserror = "1.0.30"
anyhow = "1.0.65"
fvm_ipld_blockstore = "0.1.1"
fvm_ipld_encoding = "0.3.0"
multihash = { version = "0.16.1", default-features = false }
serde_repr = "0.1.8"
regex = "1"
itertools = "0.10"
paste = "1.0.9"

# A fake-proofs dependency but... we can't select on that feature here because we enable it from
# build.rs.
sha2 = "0.10"

# fil-actor
fvm_sdk = { version = "3.0.0-alpha.14", optional = true }

# test_util
rand = { version = "0.8.5", default-features = false, optional = true }
hex = { version = "0.4.3", optional = true }
blake2b_simd = { version = "1.0", optional = true }

[dependencies.libsecp256k1]
version = "0.7.1"
default-features = false
features = ["static-context", "std"]
optional = true

[dev-dependencies]
derive_builder = "0.10.2"
hex = "0.4.3"
rand = { version = "0.8.5" }

[features]
default = []
fil-actor = ["fvm_sdk"]
m2-native = ["fvm_sdk/m2-native"]

# Enable 2k sectors
sector-2k = []
# Enable 8m sectors
sector-8m = []
# Enable 512m sectors
sector-512m = []
# Enable 32g sectors
sector-32g = []
# Enable 64g sectors
sector-64g = []
# Enable the "default" sectors types.
sector-default = ["sector-64g", "sector-32g"]

# Reduce min verified deal size from 1MiB to 256B
small-deals = []
# Reduce pre-commit delay from 150 epochs, to 10.
short-precommit = []

# Lower the minimum power requirement to 2k
min-power-2k = []
# Lower the minimum power requirement to 2g
min-power-2g = []

# no collateral for deals (for testing)
no-provider-deal-collateral = []

# fake proofs (for testing)
fake-proofs = []

test_utils = ["hex", "multihash/sha2", "libsecp256k1", "blake2b_simd", "rand", "rand/std_rng", "lazy_static"]
