[package]
name = "fil_actors_runtime"
description = "System actors for the Filecoin protocol"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
authors = ["ChainSafe Systems <info@chainsafe.io>", "Protocol Labs", "Filecoin Core Devs"]

[dependencies]
anyhow = { workspace = true }
byteorder = { workspace = true }
castaway = { workspace = true }
cid = { workspace = true }
fvm_ipld_amt = { workspace = true }
fvm_ipld_bitfield = { workspace = true }
fvm_ipld_blockstore = { workspace = true }
fvm_ipld_encoding = { workspace = true }
fvm_ipld_hamt = { workspace = true }
fvm_sdk = { workspace = true, optional = true }
fvm_shared = { workspace = true }
integer-encoding = { workspace = true }
itertools = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
multihash = { workspace = true }
num = { workspace = true  }
num-derive = { workspace = true }
num-traits = { workspace = true }
paste = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_repr = { workspace = true }
thiserror = { workspace = true }
unsigned-varint = { workspace = true }
vm_api = { workspace = true }

# A fake-proofs dependency but... we can't select on that feature here because we enable it from
# build.rs.
sha2 = { workspace = true }

# test_util
blake2b_simd = { workspace = true, optional = true }
hex = { workspace = true, optional = true }
pretty_env_logger = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
base64 = "0.21.2"

[dependencies.libsecp256k1]
workspace = true
features = ["static-context", "std"]
optional = true

[dev-dependencies]
derive_builder = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
const-hex = { workspace = true }
# Enable the test_utils feature when testing.
fil_actors_runtime = { workspace = true, features = ["test_utils"] }

[features]
default = []
fil-actor = ["fvm_sdk"]

# Enable 2k sectors
sector-2k = []
# Enable 8m sectors
sector-8m = []
# Enable 512m sectors
sector-512m = []
# Enable 32g sectors
sector-32g = []
# Enable 64g sectors
sector-64g = []
# Enable the "default" sectors types.
sector-default = ["sector-64g", "sector-32g"]

# Reduce min verified deal size from 1MiB to 256B
small-deals = []
# Reduce pre-commit delay from 150 epochs, to 10.
short-precommit = []

# Lower the minimum power requirement to 2k
min-power-2k = []
# Lower the minimum power requirement to 2g
min-power-2g = []

# no collateral for deals (for testing)
no-provider-deal-collateral = []

# fake proofs (for testing)
fake-proofs = []


test_utils = ["hex", "multihash/sha2", "multihash/sha3", "multihash/ripemd", "libsecp256k1", "blake2b_simd", "rand", "rand/std_rng", "pretty_env_logger"]
