[package]
name        = "fil_builtin_actors_state"
description = "Builtin Actor state utils for Filecoin"
version     = "9.0.3"
license     = "MIT OR Apache-2.0"
authors     = ["ChainSafe Systems <info@chainsafe.io>", "Protocol Labs", "Filecoin Core Devs"]
edition     = "2018"
repository  = "https://github.com/filecoin-project/builtin-actors"
keywords    = ["filecoin", "web3", "wasm"]

[lib]
## lib is necessary for integration tests
## cdylib is necessary for Wasm build
crate-type = ["cdylib", "lib"]

[dependencies]
anyhow                      = "1.0.65"
bimap                       = { version = "0.6.2" }
cid                         = { version = "0.8.3", default-features = false, features = ["serde-codec"] }
fil_actor_account_state_v9  = { version = "9.0.3", path = "../actors/account_state_v9" }
fil_actor_cron_state_v9     = { version = "9.0.3", path = "../actors/cron_state_v9" }
fil_actor_datacap_state_v9  = { version = "9.0.3", path = "../actors/datacap_state_v9" }
fil_actor_init_state_v9     = { version = "9.0.3", path = "../actors/init_state_v9" }
fil_actor_market_state_v9   = { version = "9.0.3", path = "../actors/market_state_v9" }
fil_actor_miner_state_v9    = { version = "9.0.3", path = "../actors/miner_state_v9" }
fil_actor_multisig_state_v9 = { version = "9.0.3", path = "../actors/multisig_state_v9" }
fil_actor_paych_state_v9    = { version = "9.0.3", path = "../actors/paych_state_v9" }
fil_actor_power_state_v9    = { version = "9.0.3", path = "../actors/power_state_v9" }
fil_actor_reward_state_v9   = { version = "9.0.3", path = "../actors/reward_state_v9" }
fil_actor_system_state_v9   = { version = "9.0.3", path = "../actors/system_state_v9" }
fil_actor_verifreg_state_v9 = { version = "9.0.3", path = "../actors/verifreg_state_v9" }
fil_actors_runtime_common   = { version = "9.0.3", path = "../runtime" }
fvm_ipld_blockstore         = "0.1.1"
fvm_ipld_encoding           = "0.2.2"
fvm_shared                  = { version = "2.0.0-alpha.2", default-features = false }
num-derive                  = "0.3.3"
num-traits                  = "0.2.14"
serde                       = { version = "1.0.136", features = ["derive"] }

[dev-dependencies]

[features]
fil-actor = ["fil_actors_runtime_common/fil-actor"]
